--- a/app/src/main/res/layout/homepage_gridcards_layout.xml
+++ b/app/src/main/res/layout/homepage_gridcards_layout.xml
@@ -245,7 +245,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_gravity="center"
-                    android:text="IOS Version?"
+                    android:text="iOS Version?"
                     android:textAlignment="center"
                     android:textSize="18sp"/>
             </LinearLayout>
